TS-3909: Further trampoline crash fixes. This closes #575.